# govm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  constants.rs  download.rs  govm.rs  main.rs  shim.rs  types.rs  version.rs
tests/: integration_test.rs
