[package]
name = "govm"
version = "0.1.0"
edition = "2021"
description = "A Go version manager - install, use, and manage Go versions"
authors = ["Maneesh Sagar"]
license = "MIT"
repository = "https://github.com/maneeshsagar/govm"
keywords = ["go", "golang", "version-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
dirs = "5"
colored = "2"
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true